@@ -37,6 +37,7 @@ SUBDIRS = 		\
 EXTRA_DIST = 		\
 	silcdefs.h.in	\
 #ifdef SILC_DIST_TOOLKIT
+	silc-toolkit.spec \
 	symbian		\
 #endif SILC_DIST_TOOLKIT
 #ifdef SILC_DIST_CLIENT
