@@ -1,3 +1,7 @@
+Wed May 30 18:46:34 EEST 2007  Pekka Riikonen <priikone@silcnet.org>
+
+	* Added silc-toolkit.spec.in RPM spec file.
+
 Mon May 28 23:21:39 EEST 2007  Pekka Riikonen <priikone@silcnet.org>
 
 	* Fixed nickname formatting crash when updating existing
